# hajimu_engine_render

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: hello_sprite.jp
include/: eng_render.h
src/: eng_batch.c  eng_camera.c  eng_font.c  eng_internal.h  eng_shader.c  eng_texture.c  eng_window.c  plugin.c  win_gl.c  win_gl.h
